# foiacquire

./: .dockerignore  .env.example  .gitignore  .jscpd.json  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.builder  Dockerfile.chromium  Dockerfile.chromium-stealth  Dockerfile.local  Dockerfile.runtime  README.md  build.rs  clippy.toml  deny.toml
crates/foia-analysis/: Cargo.toml
crates/foia-analysis/src/: lib.rs
crates/foia-analysis/src/analysis/: backend.rs  custom.rs  manager.rs  mod.rs  ocr_adapter.rs  whisper.rs
crates/foia-analysis/src/ocr/: api_backend.rs  archive.rs  backend.rs  deepseek.rs  email.rs  extractor.rs  fallback.rs  gemini.rs  groq.rs  mod.rs  model_utils.rs  ocrs_backend.rs  paddle_backend.rs  pdf_utils.rs  tesseract.rs
crates/foia-analysis/src/services/: mod.rs
crates/foia-analysis/src/services/analysis/: mod.rs  processing.rs  stages.rs  types.rs
crates/foia-annotate/: Cargo.toml
crates/foia-annotate/src/: lib.rs
crates/foia-annotate/src/services/annotation/: annotator.rs  date_annotator.rs  llm_annotator.rs  manager.rs  mod.rs  ner_annotator.rs  stage.rs  types.rs  url_annotator.rs
crates/foia-cli/: Cargo.toml
crates/foia-cli/src/: main.rs
crates/foia-cli/src/cli/: helpers.rs  mod.rs  progress.rs  tui.rs
crates/foia-cli/src/cli/commands/: annotate.rs  config_cmd.rs  daemon.rs  documents.rs  entities.rs  helpers.rs  import.rs  init.rs  llm.rs  mod.rs  regions.rs  serve.rs  source.rs  state.rs
crates/foia-cli/src/cli/commands/analyze/: check.rs  compare.rs  mod.rs  process.rs
crates/foia-cli/src/cli/commands/db/: copy.rs  dedup.rs  migrate.rs  mod.rs  remap.rs
crates/foia-cli/src/cli/commands/discover/: all.rs  browser.rs  mod.rs  pattern.rs  search.rs  sources.rs
crates/foia-cli/src/cli/commands/scrape/: discovery.rs  download.rs  helpers.rs  mod.rs  refresh.rs  scrape_cmd.rs  single_source.rs  status.rs
crates/foia-scrape/: Cargo.toml
crates/foia-scrape/src/: config.rs  google_drive.rs  lib.rs
crates/foia-scrape/src/archive/: mod.rs  wayback.rs
crates/foia-scrape/src/configurable/: api.rs  discovery.rs  extract.rs  fetch.rs  html_crawl.rs  mod.rs  stream.rs
crates/foia-scrape/src/discovery/: config.rs  mod.rs  result.rs  url_utils.rs
crates/foia-scrape/src/discovery/sources/: common_paths.rs  mod.rs  sitemap.rs  wayback.rs
crates/foia-scrape/src/discovery/sources/search/: duckduckgo.rs  mod.rs  query.rs
crates/foia-scrape/src/discovery/term_extraction/: llm.rs  mod.rs  template.rs
crates/foia-scrape/src/services/: mod.rs  youtube.rs
crates/foia-scrape/src/services/download/: mod.rs  types.rs  youtube_download.rs
crates/foia-server/: Cargo.toml
crates/foia-server/src/: cache.rs  lib.rs  routes.rs  template_structs.rs
crates/foia-server/src/handlers/: annotations_api.rs  api.rs  browse.rs  documents.rs  documents_api.rs  duplicates.rs  entities_api.rs  export_api.rs  helpers.rs  mod.rs  ocr.rs  openapi.rs  pages.rs  search_api.rs  types.rs  versions_api.rs
crates/foia-server/templates/: base.html  browse.html  tags.html  types.html
crates/foiacquire/: Cargo.toml
crates/foiacquire-analysis/: Cargo.toml
crates/foiacquire-analysis/src/: lib.rs
crates/foiacquire-analysis/src/analysis/: backend.rs  custom.rs  manager.rs  mod.rs  ocr_adapter.rs
crates/foiacquire-analysis/src/ocr/: api_backend.rs  archive.rs  backend.rs  deepseek.rs  email.rs  extractor.rs  fallback.rs  gemini.rs  groq.rs  mod.rs  model_utils.rs  ocrs_backend.rs  paddle_backend.rs  pdf_utils.rs  tesseract.rs
crates/foiacquire-analysis/src/services/analysis/: mod.rs  processing.rs  types.rs
crates/foiacquire-annotate/: Cargo.toml
crates/foiacquire-annotate/src/: lib.rs
crates/foiacquire-annotate/src/services/: date_detection.rs  mod.rs
crates/foiacquire-annotate/src/services/annotation/: annotator.rs  date_annotator.rs  llm_annotator.rs  manager.rs  mod.rs  ner_annotator.rs  types.rs  url_annotator.rs
crates/foiacquire-cli/: Cargo.toml
crates/foiacquire-cli/src/: main.rs
crates/foiacquire-cli/src/cli/: helpers.rs  icons.rs  mod.rs
crates/foiacquire-cli/src/cli/commands/: annotate.rs  config_cmd.rs  daemon.rs  documents.rs  entities.rs  import.rs  init.rs  llm.rs  mod.rs  regions.rs  serve.rs  source.rs  state.rs
crates/foiacquire-cli/src/cli/commands/analyze/: check.rs  (+2 more)
crates/foiacquire-import/: Cargo.toml
crates/foiacquire-import/src/: lib.rs  runner.rs
crates/foiacquire-import/src/sources/: concordance.rs  mod.rs  warc.rs
crates/foiacquire-server/: Cargo.toml
crates/foiacquire-server/src/: lib.rs  routes.rs  styles.css  template_structs.rs
crates/foiacquire-server/src/handlers/: annotations_api.rs  api.rs  api_types.rs  documents.rs  documents_api.rs  entities_api.rs  export_api.rs  helpers.rs  ocr.rs  openapi.rs  pages.rs  scrape_api.rs  tags.rs  timeline.rs  types.rs  versions_api.rs
crates/foiacquire-server/templates/: browse.html  document_detail.html  tags.html
crates/foiacquire/src/: gis_data.rs  lib.rs  schema.rs  storage.rs
crates/foiacquire/src/browser/: binary.rs  mod.rs  selection.rs
crates/foiacquire/src/config/: browser.rs  loader.rs  mod.rs  scraper.rs
crates/foiacquire/src/http_client/: mod.rs  response.rs
crates/foiacquire/src/migrations/: m0006_page_ocr_results.rs  mod.rs
crates/foiacquire/src/models/: document.rs
crates/foiacquire/src/prefer_db/: mod.rs
crates/foiacquire/src/privacy/: config.rs  hidden_service.rs  mod.rs
crates/foiacquire/src/rate_limit/: limiter.rs
crates/foiacquire/src/repository/: diesel_models.rs  diesel_service_status.rs  diesel_source.rs  migration.rs  migrations.rs  source.rs
crates/foiacquire/src/repository/diesel_crawl/: mod.rs  queue.rs  stats.rs  urls.rs
crates/foiacquire/src/repository/diesel_document/: entities.rs  mod.rs  queries.rs  versions.rs
crates/foiacquire/src/repository/migration_postgres/: exporter.rs
crates/foiacquire/src/services/: mod.rs
crates/foiacquire/src/services/annotation/: url_annotator.rs
crates/foiacquire/src/utils/: mime.rs  mod.rs
crates/foiacquire/tests/fixtures/: expected_schema.json
(+382 files in other folders)
