[package]
name = "foiacquire"
version = "0.1.0"
edition = "2021"
authors = ["monokrome"]
description = "FOIA document acquisition and research system"
license = "MIT"
repository = "https://github.com/monokrome/foiacquire"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (using rustls for cross-platform builds without OpenSSL)
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "gzip", "brotli", "rustls-tls"] }

# HTML parsing
scraper = "0.20"

# Database - Diesel ORM with compile-time checking
diesel = { version = "2", features = ["sqlite", "chrono", "r2d2"] }
diesel-async = { version = "0.5", features = ["sqlite", "deadpool", "sync-connection-wrapper"] }
deadpool = "0.12"
# Bundle SQLite for static musl builds
libsqlite3-sys = { version = "0.30", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Configuration management
prefer = "0.2"

# Environment file loading
dotenvy = "0.15"

# CLI
clap = { version = "4", features = ["derive"] }

# Hashing
sha2 = "0.10"
blake3 = "1"
hex = "0.4"

# Base64 encoding/decoding
base64 = "0.22"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Unix system calls (for UID/GID diagnostics)
libc = "0.2"

# Async traits
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Progress display and TUI
indicatif = "0.17"
console = "0.15"
crossterm = "0.28"

# URL handling
url = "2"
urlencoding = "2"

# Regex
regex = "1"

# MIME type detection from file content
infer = "0.16"

# Web server
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
mime_guess = "2"

# HTML templating
askama = "0.12"

# Temporary directories
tempfile = "3"

# Archive handling
zip = "2"

# Email parsing
mail-parser = "0.9"

# OCR - Tesseract is always available (uses system binary)
# image crate needed for optional OCR backends
image = { version = "0.25", optional = true }

# OCRS - pure Rust OCR (optional, models auto-download)
ocrs = { version = "0.11", optional = true }
rten = { version = "0.22", optional = true }
rten-imageproc = { version = "0.22", optional = true }

# PaddleOCR - CNN-based OCR via ONNX (optional, models auto-download)
paddle-ocr-rs = { version = "0.6", optional = true }

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Path expansion
shellexpand = "3"

# Home directory
dirs = "5"

# Browser automation (optional, for JS-heavy sites)
# Using git version for compatibility with newer Chrome versions (fixes WS message parsing)
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", rev = "6f2392f", optional = true, features = ["tokio-runtime"] }
futures = "0.3"

# Redis client (optional, for distributed rate limiting)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }

# WARC archive parsing (for importing web archives)
warc = { version = "0.4", features = ["gzip"] }

# RabbitMQ client (optional, for distributed job queue)
lapin = { version = "2", optional = true }

# PostgreSQL COPY protocol support (optional, for fast bulk loads)
tokio-postgres = { version = "0.7", optional = true }
futures-util = { version = "0.3", optional = true }
bytes = { version = "1", optional = true }

[features]
default = ["browser"]
browser = ["chromiumoxide"]
# Note: diesel-async/postgres enables diesel/postgres_backend (types only, no libpq/OpenSSL needed)
postgres = ["diesel-async/postgres", "dep:tokio-postgres", "dep:futures-util", "dep:bytes"]
redis-backend = ["redis"]
amqp-broker = ["lapin"]
ocr-ocrs = ["ocrs", "rten", "rten-imageproc", "image"]
ocr-paddle = ["paddle-ocr-rs", "image"]
ocr-all = ["ocr-ocrs", "ocr-paddle"]

[[bin]]
name = "foiacquire"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
