[package]
name = "foiacquire"
version = "0.10.1"
edition = "2021"
authors = ["monokrome"]
description = "FOIA document acquisition and research system"
license = "MIT"
repository = "https://github.com/monokrome/foiacquire"
autobins = false

[lib]
name = "foiacquire"
path = "src/lib.rs"

[[bin]]
name = "foia"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (using rustls for cross-platform builds without OpenSSL)
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "gzip", "brotli", "rustls-tls", "socks"] }

# HTML parsing
scraper = "0.25"

# Database - Diesel ORM with compile-time checking
diesel = { version = "2", features = ["sqlite", "chrono", "r2d2"] }
diesel-async = { version = "0.5", features = ["sqlite", "deadpool", "sync-connection-wrapper"] }
diesel_migrations = "2"
deadpool = "0.12"
# Bundle SQLite for static musl builds (0.35 for arti compatibility)
libsqlite3-sys = { version = "0.35", features = ["bundled"] }

# Migrations
cetane = { git = "https://github.com/monokrome/cetane", tag = "v0.1.1" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Configuration management
prefer = { version = "0.3.4", features = ["derive"] }
prefer_db = "0.3.4"

# Environment file loading
dotenvy = "0.15"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Hashing
sha2 = "0.10"
blake3 = "1"
hex = "0.4"

# Base64 encoding/decoding
base64 = "0.22"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Async traits
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Progress display and TUI
indicatif = "0.18"
console = "0.15"
crossterm = "0.28"

# URL handling
url = "2"
urlencoding = "2"

# Regex
regex = "1"

# MIME type detection from file content
infer = "0.16"

# Web server
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
mime_guess = "2"

# HTML templating
askama = "0.12"

# Temporary directories
tempfile = "3"

# Archive handling
zip = "2"

# Email parsing
mail-parser = "0.9"

# OCR - Tesseract is always available (uses system binary)
# image crate needed for optional OCR backends
image = { version = "0.25", optional = true }

# OCRS - pure Rust OCR (optional, models auto-download)
ocrs = { version = "0.11", optional = true }
rten = { version = "0.22", optional = true }
rten-imageproc = { version = "0.22", optional = true }

# PaddleOCR - CNN-based OCR via ONNX (optional, models auto-download)
paddle-ocr-rs = { version = "0.6", optional = true }

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Path expansion
shellexpand = "3"

# Home directory
dirs = "5"

# Find executables in PATH
which = "7"

# Browser automation (optional, for JS-heavy sites)
# Using git version for compatibility with newer Chrome versions (fixes WS message parsing)
# Tested with Alpine 3.21 chromium package (~v131)
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", rev = "c671c3b", optional = true, features = ["tokio-runtime"] }
futures = "0.3"

# Redis client (optional, for distributed rate limiting)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }

# WARC archive parsing (for importing web archives)
warc = { version = "0.4", features = ["gzip"] }

# RabbitMQ client (optional, for distributed job queue)
lapin = { version = "2", optional = true }

# PostgreSQL COPY protocol support (optional, for fast bulk loads)
tokio-postgres = { version = "0.7", optional = true }
futures-util = { version = "0.3", optional = true }
bytes = { version = "1", optional = true }

# Embedded Tor via Arti (optional, for privacy-by-default)
arti-client = { version = "0.37", default-features = false, features = ["tokio", "rustls", "pt-client"], optional = true }
tor-rtcompat = { version = "0.37", default-features = false, features = ["tokio", "rustls"], optional = true }
ratatui = "0.30.0"
serde_yaml = "0.9.34"
hostname = "0.4.2"

[features]
default = ["browser"]
browser = ["chromiumoxide"]
# Note: diesel-async/postgres enables diesel/postgres_backend (types only, no libpq/OpenSSL needed)
postgres = ["diesel-async/postgres", "dep:tokio-postgres", "dep:futures-util", "dep:bytes"]
redis-backend = ["redis"]
amqp-broker = ["lapin"]
ocr-ocrs = ["ocrs", "rten", "rten-imageproc", "image"]
ocr-paddle = ["paddle-ocr-rs", "image"]
ocr-all = ["ocr-ocrs", "ocr-paddle"]
# Tor/privacy features
# SECURITY: Embedded Tor via Arti is DISABLED by default due to RUSTSEC-2023-0071
# (Marvin Attack timing side-channel in rsa crate). Use C-Tor for hidden services
# and external SOCKS proxy for outbound Tor until arti updates to a fixed rsa version.
# See: https://rustsec.org/advisories/RUSTSEC-2023-0071
embedded-tor = ["arti-client", "tor-rtcompat"]
# Development only: skip security warnings and delays (NEVER use in production)
unsafe-dev = []

[profile.release]
lto = true
codegen-units = 1
strip = true

# Unix-only dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
rusqlite = { version = "0.37", features = ["bundled"] }
