[workspace]
resolver = "2"
members = [
    "crates/foiacquire",
    "crates/foiacquire-cli",
    "crates/foiacquire-import",
]

[workspace.package]
version = "0.11.3"
edition = "2021"
authors = ["monokrome"]
license = "MIT"
repository = "https://github.com/monokrome/foiacquire"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (using rustls for cross-platform builds without OpenSSL)
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "gzip", "brotli", "rustls-tls", "socks"] }

# HTML parsing
scraper = "0.25"

# Database - Diesel ORM with compile-time checking
diesel = { version = "2", features = ["sqlite", "chrono", "r2d2"] }
diesel-async = { version = "0.5", features = ["sqlite", "deadpool", "sync-connection-wrapper"] }
deadpool = "0.12"
# Bundle SQLite for static musl builds (0.35 for arti compatibility)
libsqlite3-sys = { version = "0.35", features = ["bundled"] }

# Migrations
cetane = "0.1.1"
rusqlite = "0.37"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
toml = "0.8"

# Configuration management
prefer = { version = "0.3.4", features = ["derive"] }
prefer_db = "0.3.4"

# Environment file loading
dotenvy = "0.15"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Hashing
sha2 = "0.10"
blake3 = "1"
hex = "0.4"

# Base64 encoding/decoding
base64 = "0.22"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Async traits
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Progress display and TUI
indicatif = "0.18"
console = "0.15"
crossterm = "0.28"
ratatui = "0.30.0"

# URL handling
url = "2"
urlencoding = "2"

# Regex
regex = "1"

# MIME type detection from file content
infer = "0.16"

# Web server
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
mime_guess = "2"

# HTML templating
askama = "0.12"

# Temporary directories
tempfile = "3"

# Archive handling
zip = "2"

# Email parsing
mail-parser = "0.9"

# OCR - image crate needed for optional OCR backends
image = { version = "0.25" }

# OCRS - pure Rust OCR (optional, models auto-download)
ocrs = { version = "0.11" }
rten = { version = "0.22" }
rten-imageproc = { version = "0.22" }

# PaddleOCR - CNN-based OCR via ONNX (optional, models auto-download)
paddle-ocr-rs = { version = "0.6" }

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Path expansion
shellexpand = "3"

# Home directory
dirs = "5"

# Find executables in PATH
which = "7"

# Browser automation (optional, for JS-heavy sites)
# Using git version for compatibility with newer Chrome versions (fixes WS message parsing)
# Tested with Alpine 3.21 chromium package (~v131)
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", rev = "c671c3b", features = ["tokio-runtime"] }
futures = "0.3"

# Redis client (optional, for distributed rate limiting)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# WARC archive parsing (for importing web archives)
warc = { version = "0.4", features = ["gzip"] }

# RabbitMQ client (optional, for distributed job queue)
lapin = { version = "2" }

# PostgreSQL COPY protocol support (optional, for fast bulk loads)
tokio-postgres = { version = "0.7" }
tokio-postgres-rustls = { version = "0.13" }
rustls = { version = "0.23", default-features = false }
rustls-native-certs = { version = "0.8" }
futures-util = { version = "0.3" }
bytes = { version = ">=1.11.1" }

# Embedded Tor via Arti (optional, for privacy-by-default)
arti-client = { version = "0.37", default-features = false, features = ["tokio", "rustls", "pt-client"] }
tor-rtcompat = { version = "0.37", default-features = false, features = ["tokio", "rustls"] }

# System info
hostname = "0.4.2"

# Unix-only
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
