[package]
name = "foia-analysis"
description = "OCR, text extraction, and document analysis for foia"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
foia = { path = "../foia", default-features = false }
anyhow = { workspace = true }
base64 = { workspace = true }
console = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
infer = { workspace = true }
mail-parser = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
zip = { workspace = true }

[dependencies.image]
workspace = true
optional = true

[dependencies.ocrs]
workspace = true
optional = true

[dependencies.paddle-ocr-rs]
workspace = true
optional = true

[dependencies.rten]
workspace = true
optional = true

[features]
default = []
embedded-tor = ["foia/embedded-tor"]
ocr-ocrs = ["image", "ocrs", "rten"]
ocr-paddle = ["paddle-ocr-rs"]
