[package]
name = "foiacquire-annotate"
description = "Annotation, NER, and date detection services for foiacquire"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
foiacquire = { path = "../foiacquire", default-features = false }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[features]
default = []
gis = ["foiacquire/gis"]
