[package]
name = "foiacquire-cli"
description = "CLI interface for foiacquire FOIA document acquisition system"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
autobins = false

[[bin]]
name = "foia"
path = "src/main.rs"

[dependencies]
foiacquire = { path = "../foiacquire", default-features = false }
foiacquire-analysis = { path = "../foiacquire-analysis", default-features = false }
foiacquire-annotate = { path = "../foiacquire-annotate", default-features = false }
foiacquire-import = { path = "../foiacquire-import" }
foiacquire-scrape = { path = "../foiacquire-scrape", default-features = false }
foiacquire-server = { path = "../foiacquire-server", default-features = false }

anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
console = { workspace = true }
crossterm = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
dotenvy = { workspace = true }
hex = { workspace = true }
indicatif = { workspace = true }
infer = { workspace = true }
prefer = { workspace = true }
ratatui = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[features]
default = ["browser"]
gis = ["foiacquire/gis", "foiacquire-annotate/gis", "foiacquire-server/gis"]
browser = ["foiacquire/browser", "foiacquire-scrape/browser"]
postgres = ["foiacquire/postgres"]
redis-backend = ["foiacquire/redis-backend", "foiacquire-scrape/redis-backend"]
amqp-broker = ["foiacquire/amqp-broker"]
ocr-ocrs = ["foiacquire-analysis/ocr-ocrs"]
ocr-paddle = ["foiacquire-analysis/ocr-paddle"]
ocr-all = ["ocr-ocrs", "ocr-paddle"]
embedded-tor = ["foiacquire/embedded-tor", "foiacquire-analysis/embedded-tor"]
unsafe-dev = ["foiacquire/unsafe-dev"]
