[package]
name = "foiacquire-server"
description = "Web server and API handlers for foiacquire"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
foiacquire = { path = "../foiacquire", default-features = false }
foiacquire-analysis = { path = "../foiacquire-analysis", default-features = false }
anyhow = { workspace = true }
askama = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
mime_guess = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }

[features]
default = []
gis = ["foiacquire/gis"]
