[package]
name = "foiacquire"
description = "FOIA document acquisition and research system"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
autobins = false

[lib]
name = "foiacquire"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
scraper = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
deadpool = { workspace = true }
libsqlite3-sys = { workspace = true }
cetane = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
prefer = { workspace = true }
prefer_db = { workspace = true }
dotenvy = { workspace = true }
clap = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
regex = { workspace = true }
infer = { workspace = true }
tempfile = { workspace = true }
zip = { workspace = true }
mail-parser = { workspace = true }
uuid = { workspace = true }
shellexpand = { workspace = true }
dirs = { workspace = true }
which = { workspace = true }
chromiumoxide = { workspace = true, optional = true }
futures = { workspace = true }
redis = { workspace = true, optional = true }
warc = { workspace = true }
lapin = { workspace = true, optional = true }
tokio-postgres = { workspace = true, optional = true }
tokio-postgres-rustls = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rustls-native-certs = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
arti-client = { workspace = true, optional = true }
tor-rtcompat = { workspace = true, optional = true }
hostname = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[features]
default = ["browser"]
gis = []
browser = ["chromiumoxide"]
# Note: diesel-async/postgres enables diesel/postgres_backend (types only, no libpq/OpenSSL needed)
postgres = ["diesel-async/postgres", "dep:tokio-postgres", "dep:tokio-postgres-rustls", "dep:rustls", "dep:rustls-native-certs", "dep:futures-util", "dep:bytes"]
redis-backend = ["redis"]
amqp-broker = ["lapin"]
# Tor/privacy features
# SECURITY: Embedded Tor via Arti is DISABLED by default due to RUSTSEC-2023-0071
# (Marvin Attack timing side-channel in rsa crate). Use C-Tor for hidden services
# and external SOCKS proxy for outbound Tor until arti updates to a fixed rsa version.
# See: https://rustsec.org/advisories/RUSTSEC-2023-0071
embedded-tor = ["arti-client", "tor-rtcompat"]
# Development only: skip security warnings and delays (NEVER use in production)
unsafe-dev = []

[dev-dependencies]
